# fele

./: .gitignore  README.md  docker-compose.yml  start-dev.bat  start-dev.ps1
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  company.py  health.py  route.py
backend/app/core/: bootstrap.py  config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  customer.py  inventory.py  product.py  session.py  supplier.py  tenant.py  warehouse.py
backend/app/schemas/: auth.py  common.py  company.py  health.py  route.py
backend/app/services/: auth_service.py
backend/scripts/: provision_tenant.py
frontend/: .env.test  package.json  pnpm-lock.yaml
frontend/src/constants/: reg.ts
frontend/src/locales/langs/: en-us.ts  zh-cn.ts
frontend/src/plugins/: assets.ts
frontend/src/router/elegant/: imports.ts  routes.ts  transform.ts
frontend/src/service/api/: auth.ts  company.ts  index.ts
frontend/src/store/modules/auth/: index.ts
frontend/src/styles/css/: ag-grid.css
frontend/src/theme/: settings.ts
frontend/src/typings/: app.d.ts  components.d.ts  elegant-router.d.ts  storage.d.ts
frontend/src/typings/api/: auth.d.ts  company.d.ts
frontend/src/views/company/: index.vue
frontend/src/views/finance/: index.vue
frontend/src/views/home/: index.vue
frontend/src/views/order/: index.vue
frontend/src/views/print/: index.vue
frontend/src/views/purchase/: index.vue
frontend/src/views/report/: index.vue
(+8 files in other folders)
